--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 /* button 기본 테두리 제거 */
 
 button {
+    background-color: #ffffff;
     border: none;
     padding: 0px;
 }
@@ -235,6 +236,10 @@ h4 {
 
 @media screen and (max-width: 768px) {
     /* 모바일에 사용될 스타일 시트를 여기에 작성합니다. */
+    .container {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
     #profile {
         margin-bottom: 14px;
     }
@@ -246,16 +251,18 @@ h4 {
     .my-profile {
         float: none;
         text-align: left;
-        padding: 0;
+        padding: 10px;
         width: 100%;
     }
     #skill {
         margin-bottom: 70px;
     }
     .content-skill .section article {
+        width: 330px;
         margin-bottom: 14px;
     }
     .content-project .section article {
+        width: 330px;
         margin-bottom: 14px;
     }
 }
