--- a/style.css
+++ b/style.css
@@ -10,10 +10,12 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
 * {
   font-family: "Spoqa Han Sans";
-  font-family: "Open Sans", sans-serif;
 }
 
 /* button 기본 테두리 제거 */
+html {
+  scroll-behavior: smooth;
+}
 
 button {
   background-color: #ffffff;
@@ -109,6 +111,7 @@ article {
   padding-left: 50px;
   float: right;
   width: 60%;
+  margin-bottom: 100px;
 }
 
 .name {
@@ -185,8 +188,10 @@ h4 {
 
 #project {
   padding-top: 30px;
-  margin-bottom: 160px;
+  padding-bottom: 60px;
+  margin-bottom: 140px;
   border-top: 1px solid #efefef;
+  border-bottom: 1px solid #efefef;
 }
 
 .content-project {
@@ -225,6 +230,20 @@ h4 {
 .content-project .section .section-img img {
   width: auto;
   height: auto;
+}
+
+/* footer */
+
+footer {
+  text-align: center;
+  background-color: #f8f9fa !important;
+  height: 55px;
+  align-items: center;
+  padding-top: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+  font-weight: 600;
+  font-family: "Open Sans", sans-serif;
 }
 
 @media screen and (max-width: 768px) {
